<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context="com.example.android.firstproject.MainActivity">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/istanbul" />

            <TextView
                style="@style/titleStyle"
                android:text="@string/name"
                android:textColor="@color/iti" />

            <TextView
                style="@style/textViewStyle2"
                android:text="@string/description"
                android:textColor="@color/description"/>

            <TextView
                style="@style/textViewStyle"
                android:text="@string/contact"
                android:textColor="@color/contact" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    style="@style/ImageStyle"
                    android:src="@drawable/phone" />

                <TextView
                    style="@style/textViewStyle"
                    android:autoLink="phone"
                    android:text="@string/phone"
                    android:textColorLink="@color/phone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    style="@style/ImageStyle"
                    android:src="@drawable/email" />

                <TextView
                    style="@style/textViewStyle"
                    android:autoLink="email"
                    android:text="@string/email"
                    android:textColorLink="@color/email" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    style="@style/ImageStyle"
                    android:src="@drawable/location" />

                <TextView
                    android:id="@+id/textViewLinkable"
                    style="@style/textViewStyle"
                    android:onClick="mapping"
                    android:text="@string/location"
                    android:textColor="@color/location" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    style="@style/ImageStyle"
                    android:src="@drawable/web" />

                <TextView
                    style="@style/textViewStyle"
                    android:autoLink="web"
                    android:text="@string/web"
                    android:textColorLink="@color/web" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    style="@style/ImageStyle"
                    android:src="@drawable/hours" />

                <TextView
                    style="@style/textViewStyle"
                    android:text="@string/hours"
                    android:textColor="@color/hours" />
            </LinearLayout>
        </LinearLayout>
    </HorizontalScrollView>
</ScrollView>